Alibek: added new section

--- a/index.html
+++ b/index.html
@@ -747,5 +747,156 @@
       </div>
     </section>
     <!-- blog section ends -->
+    <!-- awards section starts -->
+    <section class="awards">
+      <div class="container">
+        <div class="awards__warpper">
+          <div class="awards__top">
+            <h2 class="awards__title title1">Отзывы</h2>
+            <button class="awards__btn">
+              Оставить отзыв
+              <img
+                class="awards__top-img"
+                src="./icons/awards-1.svg"
+                alt="awards img"
+              />
+            </button>
+          </div>
+          <div class="awards__bottom">
+            <div class="awards__bottom--left">
+              <h3 class="awards__bottom--title">Excellent</h3>
+              <img
+                class="awards__img"
+                src="./images/awards-2.svg"
+                alt="awards img"
+              />
+              <h4 class="awards__card--word">Based on 25,806 reviews</h4>
+              <img
+                class="awards__bottom--img"
+                src="./images/awards-3.svg"
+                alt="awards img"
+              />
+            </div>
+            <div class="awards__bottom--right">
+              <img
+                class="awards__bottom--img"
+                src="./icons/awards-4.svg"
+                alt="awards img"
+              />
+              <div class="awards__card">
+                <h4 class="awards__card--title">
+                  <img
+                    class="awards__card--img"
+                    src="./images/awards-2.svg"
+                    alt="awards img"
+                  />
+                  7 days ago
+                </h4>
+                <h3 class="awards__card--word">Cheap keys exist</h3>
+                <p class="awards__card--word">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                </p>
+                <h4 class="awards__card--title">eLitee</h4>
+                <p class="awards__card--word">
+                  Showing out 4 & 5 stars reviews
+                </p>
+              </div>
+
+              <div class="awards__card">
+                <h4 class="awards__card--title">
+                  <img
+                    class="awards__card--img"
+                    src="./images/awards-2.svg"
+                    alt="awards img"
+                  />
+                  7 days ago
+                </h4>
+
+                <h3 class="awards__card--word">Cheap keys exist</h3>
+                <p class="awards__card--word">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                </p>
+                <h4 class="awards__card--title">eLitee</h4>
+                <p class="awards__card--word">
+                  Showing out 4 & 5 stars reviews
+                </p>
+              </div>
+
+              <div class="awards__card">
+                <h4 class="awards__card--title">
+                  <img
+                    class="awards__card--img"
+                    src="./images/awards-2.svg"
+                    alt="awards img"
+                  />
+                  7 days ago
+                </h4>
+                <h3 class="awards__card--word">Cheap keys exist</h3>
+                <p class="awards__card--word">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                </p>
+                <h4 class="awards__card--title">eLitee</h4>
+                <p class="awards__card--word">
+                  Showing out 4 & 5 stars reviews
+                </p>
+              </div>
+              <img
+                class="awards__bottom--img"
+                src="./icons/awards-5.svg"
+                alt="awards img"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- awards section ends -->
+    <!-- partnerships section starts -->
+    <section class="partnerships">
+      <div class="container">
+        <div class="partnerships__wrapper">
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://www.paypal.com/ca/business/resources/logos-and-banners"
+            ><img src="./images/partnerships-1.svg" alt="partnerships img"
+          /></a>
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://www.mastercard.com/global/en.html"
+            ><img src="./images/partnerships-2.svg" alt="partnerships img"
+          /></a>
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://cis.visa.com/visa-in-uzbekistan.html"
+            ><img src="./images/partnerships-3.svg" alt="partnerships img"
+          /></a>
+          <a target="_blank" class="partnerships__link" href="https://mir24.tv/"
+            ><img src="./images/partnerships-4.svg" alt="partnerships img"
+          /></a>
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://www.webmoney.com/"
+            ><img src="./images/partnerships-5.svg" alt="partnerships img"
+          /></a>
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://www.paypal.com/ca/business/resources/logos-and-banners"
+            ><img src="./images/partnerships-1.svg" alt="partnerships img"
+          /></a>
+          <a
+            target="_blank"
+            class="partnerships__link"
+            href="https://www.paypal.com/ca/business/resources/logos-and-banners"
+            ><img src="./images/partnerships-1.svg" alt="partnerships img"
+          /></a>
+        </div>
+      </div>
+    </section>
+    <!-- partnerships sectione ends -->
   </body>
 </html>
