new website completed

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- logo -->
     <link rel="shortcut icon" href="./images/Logo.svg" type="image/x-icon" />
+    <!-- css link -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- icons link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Game Store</title>
   </head>
   <body>
@@ -898,5 +908,109 @@
       </div>
     </section>
     <!-- partnerships sectione ends -->
+    <!-- footer section starts -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <div class="footer__cards">
+              <div class="footer__card">
+                <h3 class="footer__card--title">О компании</h3>
+                <ol>
+                  О нас
+                </ol>
+                <ol>
+                  Вакансии
+                </ol>
+                <ol>
+                  Реквизиты
+                </ol>
+              </div>
+              <div class="footer__card">
+                <h3 class="footer__card--title">Договор оферты</h3>
+                <ol>
+                  Каталог
+                </ol>
+                <ol>
+                  Акции
+                </ol>
+                <ol>
+                  Личный кабинет
+                </ol>
+              </div>
+              <div class="footer__card">
+                <h3 class="footer__card--title">Договор оферты</h3>
+                <ol>
+                  Каталог
+                </ol>
+                <ol>
+                  Акции
+                </ol>
+                <ol>
+                  Личный кабинет
+                </ol>
+              </div>
+              <div class="footer__images">
+                <img
+                  class="footer__img"
+                  src="./images/footer-1.svg"
+                  alt="footer img"
+                />
+                <img
+                  class="footer__img"
+                  src="./images/footer-2.svg"
+                  alt="footer img"
+                />
+              </div>
+            </div>
+            <p class="footer__top--description">
+              Все продаваемые ключи закупаются у официальных дистрибьюторови
+              издателей. В том числе у 1С-СофтКлаб, Бука, Новый Диск и Enaza
+            </p>
+          </div>
+          <div class="footer__bottom">
+            <h3 class="footer__bottom--title">Правовая информация</h3>
+            <p class="footer__bottom--description">
+              Интернет-магазин игр «Playnchill» © 2022
+            </p>
+            <div class="footer__bottom--icons">
+              <h3 class="header__top--title">
+                RU/$
+                <img
+                  class="header__img"
+                  src="./icons/header-1.svg"
+                  alt="header img-1"
+                />
+              </h3>
+              <a
+                target="_blank"
+                class="footer__bottom--link"
+                href="https://vk.com/"
+                ><i class="fa-brands fa-vk"></i
+              ></a>
+              <a
+                target="_blank"
+                class="footer__bottom--link"
+                href="http://discord.com/"
+                ><i class="fa-brands fa-discord"></i
+              ></a>
+              <a
+                target="_blank"
+                class="footer__bottom--link"
+                href="https://x.com/"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+              <a
+                target="_blank"
+                class="footer__bottom--link"
+                href="https://www.instagram.com/"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section ends -->
   </body>
 </html>
